# music_visualizer

./: LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: build.sh  create_app_bundle.py  create_icon.py
src/music_visualizer/: __init__.py  __main__.py  music_visualizer.py
src/music_visualizer/music_maker/: __init__.py  __main__.py  music_maker.py
